# addressbook

./: .gitignore  README.md  configure.ac  guix.scm
src/: Makefile.am  address.c  address.h  list.c  list.h  main.c  menu.c  menu.h
tests/: Makefile.am  address.c  list.c  menu.c
